# youtube-audio-extractor

./: .gitignore  Pasted--Summary-Report-Primary-Search-Query-ADC-technology-cancer-treatment-Total-videos-found-in-s-1729611435462.txt  README.md  app.py  audio_converter.py  audio_downloader.py  lambda_setup.py  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  utils.py  vercel.json  youtube_search.py
templates/: index.html
