[project]
name = "repl-nix-youtubeaudioextractor"
version = "0.1.0"
description = "search and download youtube audio"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "yt-dlp>=2024.10.22",
    "pydub>=0.25.1",
    "tqdm>=4.66.5",
    "youtube-search-python>=1.6.6",
    "speechrecognition",
]
